# A7680C-MANS

./: README.md
2269B04V03A7680MxA_SDK_230228/: .gitignore  CMakeLists.txt  Makefile  sc_application.c
2269B04V03A7680MxA_SDK_230228/config/: Config_APP.cmake  ToolChain.cmake  buildOptions.cmake  userspaceConfig.h  userspaceConfig.h.in
2269B04V03A7680MxA_SDK_230228/my_demo/: CMakeLists.txt
2269B04V03A7680MxA_SDK_230228/my_demo/inc/: my_task.h  my_test.h  simcom_demo.h
2269B04V03A7680MxA_SDK_230228/my_demo/src/: cus_uart.c  demo_helloworld.c  my_task.c
2269B04V03A7680MxA_SDK_230228/sc_lib/inc/: simcom_tts_api.h
2269B04V03A7680MxA_SDK_230228/sc_lib/inc/GPIO/: A7678_V102_GPIO.h  A7680C_LANS_GPIO.h
